--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /VentaPaquetesTuristicos/nbproject/private/
 /VentaPaquetesTuristicos/build/
+/venta-paquetes-turisticos/nbproject/private/
+/venta-paquetes-turisticos/build/
+/venta-paquetes-turisticos/dist/
