--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /venta-paquetes-turisticos/nbproject/private/
 /venta-paquetes-turisticos/build/
 /venta-paquetes-turisticos/dist/
+/ventas-paquetes-turisticos/nbproject/private/
+/ventas-paquetes-turisticos/build/
