--- a/ventas-paquetes-turisticos/web/WEB-INF/web.xml
+++ b/ventas-paquetes-turisticos/web/WEB-INF/web.xml
@@ -4,9 +4,25 @@
         <servlet-name>login</servlet-name>
         <servlet-class>controller.login</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>reservas</servlet-name>
+        <servlet-class>controller.reservas</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ConsultaTurista</servlet-name>
+        <servlet-class>ConsultaTurista</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>reservas</servlet-name>
+        <url-pattern>/reservas</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ConsultaTurista</servlet-name>
+        <url-pattern>/ConsultaTurista</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
