--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /venta-paquetes-turisticos/dist/
 /ventas-paquetes-turisticos/nbproject/private/
 /ventas-paquetes-turisticos/build/
+/ventas-paquetes-turisticos/dist/
