--- a/nblibraries.properties
+++ b/nblibraries.properties
@@ -1,3 +1,6 @@
+libs.absolutelayout.classpath=\
+    ${base}/absolutelayout/json_simple-1.1.jar
+libs.absolutelayout.displayName=SimpleJson
 libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs Task
