--- a/nblibraries.properties
+++ b/nblibraries.properties
@@ -9,3 +9,5 @@ libs.MySQLDriver.classpath=\
     ${base}/MySQLDriver/mysql-connector-java-5.1.23-bin.jar
 libs.MySQLDriver.displayName=MySQL JDBC Driver
 libs.MySQLDriver.prop-maven-dependencies=mysql:mysql-connector-java:5.1.23:jar
+libs.SimpleJson.classpath=\
+    ${base}/CopyLibs/json_simple-1.1.jar
