--- a/ventas-paquetes-turisticos/nbproject/project.properties
+++ b/ventas-paquetes-turisticos/nbproject/project.properties
@@ -41,7 +41,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${libs.SimpleJson.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
